--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JavaScript</title>
 </head>
 <body>
-    
+    <h1>Aliyor</h1>
     <script src="js/script.js"></script>
 </body>
 </html>
