--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Aliyor</h1>
     <h2>Mohinur</h2>
+    <h3>I love you</h3>
     <script src="js/script.js"></script>
 </body>
 </html>
