--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Aliyor</h1>
     <h2>Mohinur</h2>
     <h3>I love you</h3>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
